--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,18 @@
     <string name="email">Email</string>
     <string name="company">Company</string>
     <string name="age">Age</string>
+    <string name="registered">Registered</string>
+    <string name="coordinate">Coordinate</string>
+    <string name="eye_color">Eye color</string>
+    <string name="fav_fruit">Favorite fruit</string>
+    <string name="user_friends">Friends</string>
 
     <declare-styleable name="UserParamsView">
         <attr name="title"/>
         <attr name="subtitle"/>
+    </declare-styleable>
+
+    <declare-styleable name="UserImageView">
+        <attr name="title"/>
     </declare-styleable>
 </resources>
