--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="eye_color">Eye color</string>
     <string name="fav_fruit">Favorite fruit</string>
     <string name="user_friends">Friends</string>
+    <string name="user">User</string>
 
     <declare-styleable name="UserParamsView">
         <attr name="title"/>
