--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,17 @@
     <string name="fav_fruit">Favorite fruit</string>
     <string name="user_friends">Friends</string>
     <string name="user">User</string>
+    <string name="key_0">0</string>
+    <string name="key_9">9</string>
+    <string name="key_8">8</string>
+    <string name="key_7">7</string>
+    <string name="key_6">6</string>
+    <string name="key_5">5</string>
+    <string name="key_4">4</string>
+    <string name="key_3">3</string>
+    <string name="key_2">2</string>
+    <string name="key_1">1</string>
+    <string name="auth_re_enter_pin_title">Введите пин-код</string>
 
     <declare-styleable name="UserParamsView">
         <attr name="title"/>
